--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -1001,6 +1001,7 @@ figure{
     box-shadow: inset 0px 0px 14px 8px rgba(0,0,0,0.1);
     z-index: 1;
 }
+
 .playerInner{
     position: relative;
     line-height: 1;
@@ -1009,6 +1010,12 @@ figure{
     z-index: 2;
     height: 100%;
 }
+
+.playerInner .zenPlayer {
+    bottom: 70px;
+}
+
+
 .music_info{
     position: relative;
     text-align: left;
