--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -21,17 +21,16 @@ html(class="no-js", lang="en")
 
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no, minimal-ui")
 
-        link(href='http://fonts.googleapis.com/css?family=Special+Elite|Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
+        link(href='http://fonts.googleapis.com/css?family=Special+Elite|Roboto:100,300,400,500,700,900', rel='stylesheet')
         link(rel="stylesheet", href="/css/semantic.min.css")
         link(rel="stylesheet", href="/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/perber.css")
         link(rel="stylesheet", href="/css/player.zen.css")
-        //- link(rel="stylesheet", href="/css/player/circle.player.css")
 
-        script(type="text/javascript",src="/js/libs/jquery-2.0.3.min.js")
-        script(type="text/javascript",src="/js/libs/modernizr-2.5.3.min.js")
+        script(src="/js/libs/jquery-2.0.3.min.js")
+        script(src="/js/libs/modernizr-2.5.3.min.js")
 
-        script(type='text/javascript').
+        script.
             !function(r,e,a,c,t){r.GoogleAnalyticsObject=a,r[a]||(r[a]=function(){(r[a].q=r[a].q||[]).push(arguments)}),r[a].l=1*new Date(),c=e.createElement("script"),t=e.scripts[0],c.src="//www.google-analytics.com/analytics.js",t.parentNode.insertBefore(c,t)}(window,document,"ga"),ga("create","UA-44986847-1", "perber.com"),ga("send","pageview");
     body
         block content
