--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -85,7 +85,7 @@ script#about_content_template(type='text/html')
                 #Logo
                     i(class="fa fa-circle-o")
                     span Perber
-                | Not a community, not a forum, not a micro-blog, not a chat room. <br>No follow, no timeline, no notification, no registration. <br><br>Maybe you can think of Perber as a blackboard in the square, anyone can put on the cloak into the square, write text and paste picture on the blackboard, anyone can also put them cleared. -- <b>any information published by anyone may also be deleted by anyone.</b>
+                | 这是一个实时匿名群聊的网站。你可以删除所有人的对话，你的对话也可以被其他人删除。就是这样。
                 //.author
                 //    | Made by J.Y Han
                 .link
@@ -103,9 +103,9 @@ script#usage_content_template(type='text/html')
                 h3 'Hide yourselves, do cleanup'
                 | Tips:<br><br>
                 p
-                    | * Hold the white block can delete it.<br>
-                    | * When you keep Perber opening in your browser and  switch to another tab, Perber will remind the new messages.<br>
-                    | * Do not be evil. Do not send spam. Do not waste time.<br>
+                    | * 按住白色对话方块，可以删除。<br>
+                    | * 访问 Perber 的同时浏览其他网站，Perber 中有新消息时会有声音提醒<br>
+                    | * 请不要恶意刷屏，不要浪费自己和大家的时间<br>
             .intro-wrap-close
 
 script#notice_template(type='text/html')
