update content: add image for zhengchacha

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -101,30 +101,30 @@ block content
                         //-                     a( title="去 APP store 下载", href="https://itunes.apple.com/cn/app/same/id531761928?mt=8", target="_blank", style="display:block; font-size: 0;height: 90px;margin-top: 25px;margin-left: 100px;margin-right: 100px;")
                         //-                         | 去 APP store 下载
 
-                        //- card 0 apply
-                        .fixed_block.null
-                            #front
-                                .ui.right.teal.corner.label(title="虚位以待")
-                                    i.fa-lock.fa
-                                .imgbox
-                                    a.ta_cover(href="javascript:void(0);")
-                            #back
-                                #back2front.circular.ui.icon.button(title="返回")
-                                    i.fa.fa-chevron-left
-                                .ui.form
-                                    .ui.message
-                                        ul.list
-                                            li 这个位置是对外开放的，你可以申请在这里放上一张图片，或者一个网站链接，也可以是一段文字。
-                                            //- li 提交后，会有人联系你。
-                                    .field
-                                        label 你叫啥(网名之类的称呼也可以)
-                                        input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
-                                    .field
-                                        label 邮箱地址(*必填)
-                                        input#input_email(type="email",placeholder="输入邮箱地址",name="email")
-                                    .field(style="text-align:center")
-                                        #applyBtn.ui.button.green
-                                            | 写好了，提交
+                        //- //- card 0 apply
+                        //- .fixed_block.null
+                        //-     #front
+                        //-         .ui.right.teal.corner.label(title="虚位以待")
+                        //-             i.fa-lock.fa
+                        //-         .imgbox
+                        //-             a.ta_cover(href="javascript:void(0);")
+                        //-     #back
+                        //-         #back2front.circular.ui.icon.button(title="返回")
+                        //-             i.fa.fa-chevron-left
+                        //-         .ui.form
+                        //-             .ui.message
+                        //-                 ul.list
+                        //-                     li 这个位置是对外开放的，你可以申请在这里放上一张图片，或者一个网站链接，也可以是一段文字。
+                        //-                     //- li 提交后，会有人联系你。
+                        //-             .field
+                        //-                 label 你叫啥(网名之类的称呼也可以)
+                        //-                 input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
+                        //-             .field
+                        //-                 label 邮箱地址(*必填)
+                        //-                 input#input_email(type="email",placeholder="输入邮箱地址",name="email")
+                        //-             .field(style="text-align:center")
+                        //-                 #applyBtn.ui.button.green
+                        //-                     | 写好了，提交
 
                         //- //- card blocking
                         //- .fixed_block.card_4
@@ -163,16 +163,16 @@ block content
 
 
 
-                        //- .fixed_block.card_4
-                        //-     .ui.right.teal.corner.label(title="友情置顶")
-                        //-         i.fa-star.fa
-                        //-     .imgbox
-                        //-         a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ef4swkg0arj20go0jgdj0.jpg); background-size:cover;")
-                        //-         .ta_cont
-                        //-             p(style="padding-top: 300px;line-height:50px;")
-                        //-                 span(style="font-size:20px;padding-top:0;font-weight:bold;")
-                        //-                     a(href="http://www.freundevonfreunden.com/", target="_blank", style="color:#fff;")
-                        //-                         | Freunde von Freunden
+                        .fixed_block.card_4
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(style="background-image:url(http://perber.qiniudn.com/billd.gif); background-size:300px; background-repeat: no-repeat;")
+                                .ta_cont
+                                    p(style="padding-top: 300px;line-height:50px;")
+                                        span(style="padding-top:0;")
+                                            a(href="http://weibo.com/comichunter", target="_blank")
+                                                | 郑插插
 
 
                         //- card 2 bg+short text
