--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -189,9 +189,9 @@ block content
 
         #footer
             .logo
-                a(href="http://www.perber.com/")
+                a(href="/")
                     i.fa.fa-dot-circle-o
-                    span Peber
+                    span Perber
             p
                 | Made with ❤ by <a href="http://about.han.im/" target="_blank">J.Y Han</a> 2014 - 2015
             iframe(src="http://ghbtns.com/github-btn.html?user=naoyeye&repo=Perber&type=watch&count=true",
@@ -214,12 +214,12 @@ block content
     include templates/chat_tmpl
 
     //- script(src="js/player/jquery.transform.js")
-    script(src="js/libs/jquery.browser.min.js")
-    script(src="js/player/player.jquery.rotate.js")
-    script(src="js/player/player.jquery.grab.js")
-    script(src="js/player/player.jquery.jplayer.min.js")
+    script(src="/js/libs/jquery.browser.min.js")
+    script(src="/js/player/player.jquery.rotate.js")
+    script(src="/js/player/player.jquery.grab.js")
+    script(src="/js/player/player.jquery.jplayer.min.js")
     //- script(src="js/player/player.zen.js")
-    script(src="js/player/zenplayer.js")
+    script(src="/js/player/zenplayer.js")
 
     //- script(src="js/player/mod.csstransforms.min.js")
     //- script(src="js/player/circle.player.js")
