feat(icon): apple-touch-icon-precomposed

--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -18,6 +18,12 @@ html(class="no-js", lang="en")
         meta(name="apple-mobile-web-app-capable", content="yes")
 
         title Perber
+        link(rel='apple-touch-icon-precomposed', href='perber(57px).png')
+        link(rel='apple-touch-icon-precomposed', href='perber(72px).png', sizes='72x72')
+        link(rel='apple-touch-icon-precomposed', href='perber(76px).png', sizes='76x76')
+        link(rel='apple-touch-icon-precomposed', href='perber(114px).png', sizes='114x114')
+        link(rel='apple-touch-icon-precomposed', href='perber(120px).png', sizes='120x120')
+        link(rel='apple-touch-icon-precomposed', href='perber(152px).png', sizes='152x152')
 
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no, minimal-ui")
 
