优化模板页面标题

--- a/perber/views/themes/default/per.jade
+++ b/perber/views/themes/default/per.jade
@@ -1,6 +1,15 @@
 extends layout
 
+block title
+    title #{ page_title } - Perber
+
+block SEO
+    meta(name="description", content="#{ page_desc }")
+    meta(name="keywords", content="Perber")
+
 block content
+    .douban-share-content
+        | #{ page_desc }
     .wrap.single-per
         .content(role="main")
             .chat-list
