--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -1,5 +1,13 @@
 extends layout
 
+block title
+    title Perber
+
+block SEO
+    meta(name="description", content="All the words will gone, only the void forever lone")
+    meta(name="keywords", content="Perber")
+    meta(name="author", content="J.Y Han(naoyeye)")
+
 block content
     .wrap
         .content(role="main")
@@ -194,7 +202,7 @@ block content
                     i.fa.fa-dot-circle-o
                     span Perber
             p
-                | Made with ❤ by <a href="http://about.han.im/" target="_blank">J.Y Han</a> 2014 - 2015
+                | Made with ❤ by <a href="http://about.han.im/" target="_blank">J.Y Han</a> 2014 - 2016
             iframe(src="http://ghbtns.com/github-btn.html?user=naoyeye&repo=Perber&type=watch&count=true",
   allowtransparency="true", frameborder="0", scrolling="0", width="95", height="20")
             iframe(src="http://ghbtns.com/github-btn.html?user=naoyeye&repo=Perber&type=fork&count=true",
