--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -10,14 +10,15 @@ html(class="no-js", lang="en")
     // <![endif]
 
     head
-        meta(name="description", content="All the words will gone, only the void forever lone")
-        meta(name="keywords", content="Perber")
-        meta(name="author", content="J.Y Han(naoyeye)")
         meta(charset="utf-8")
+
+        block title
+
+        block SEO
+
         meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
         meta(name="apple-mobile-web-app-capable", content="yes")
 
-        title Perber
         link(rel='apple-touch-icon-precomposed', href='perber(57px).png')
         link(rel='apple-touch-icon-precomposed', href='perber(72px).png', sizes='72x72')
         link(rel='apple-touch-icon-precomposed', href='perber(76px).png', sizes='76x76')
