--- a/perber/views/themes/default/pages_404.jade
+++ b/perber/views/themes/default/pages_404.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block title
+    title 404 - Perber
+
 block content
     link(rel="stylesheet", href="/css/pages404.css")
     script(type="text/javascript",src="/js/pages404.js")
